Fix: Corrigir carregamento das tabelas de interpretação de análise foliar por grupo no backend